k8s/toolbox.yaml
# toolbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
  namespace: video-se
spec:
  restartPolicy: Never
  containers:
  - name: toolbox
    image: alpine:3.20
    command: ["sh","-c","sleep 360000"]
    volumeMounts:
    - { name: videos, mountPath: /data/videos }
  volumes:
  - name: videos
    persistentVolumeClaim: { claimName: videos-pvc }
